--- a/TERCEIRO BIMESTRE/aprendendo-matematica/matematica-basica.ipynb
+++ b/TERCEIRO BIMESTRE/aprendendo-matematica/matematica-basica.ipynb
@@ -134,13 +134,22 @@
    "source": [
     "#### Exemplo\n",
     "\n",
-    "Considere o conjunto de dados: 2, 3, 5, 7, 11, 13, 17, 19, 23, 29\n",
+    "Considere o conjunto de dados: 2, 3, 5, 6\n",
     "\n",
-    "A média aritmética simples desse conjunto de dados é 12,9.\n",
+    "A variancia desse conjunto de dados é dada pela **fórmula da variancia**:\n",
     "\n",
-    "O desvio padrão desse conjunto de dados é:\n",
+    "$$\\sigma^2 = \\frac{(2 - 4)^2 + (3 - 4)^2 + (5 - 4)^2 + (6 - 4)^2}{4} = \\frac{10}{4} = 2,5$$\n",
     "\n",
-    "$$\\sigma = \\sqrt{12,99} = 3,6$$"
+    "Logo a raiz quadrada da variância é o desvio padrão:\n",
+    "\n",
+    "$$\\sigma = \\sqrt{2,5} ≈ 1,58$$\n",
+    "\n",
+    "\n",
+    "O que nos traz a seguinte tabela:\n",
+    "\n",
+    "| Conjunto de dados | Média | Mediana | Moda | Variância | Desvio padrão |\n",
+    "|-------------------|-------|---------|------|-----------|---------------|\n",
+    "| 2, 3, 5, 6 | 4 | 4 | Não tem | 1,75 | 1,32 |\n"
    ]
   },
   {
@@ -247,9 +256,7 @@
     "\n",
     "- Q1: 5\n",
     "- Q2: 11\n",
-    "- Q3: 19\n",
-    "\n",
-    "Quando o conjunto não pode ser dividido em partes iguais, a mediana é o valor central."
+    "- Q3: 19"
    ]
   }
  ],
