conversão de bases e knn

--- a/TERCEIRO BIMESTRE/processo-analise-dados/processo-analise-dados.ipynb
+++ b/TERCEIRO BIMESTRE/processo-analise-dados/processo-analise-dados.ipynb
@@ -992,7 +992,44 @@
     "ALUNO(A)1 | ALUNO(A)2| 0     | 0     | 5     | 3     | 2 | 10   | 20 |\n",
     "ALUNO(A)1 | ALUNO(A)3| 2     | 0     | 2.5     | 0     | 3.75 | 9.5   | 17.75 |\n",
     "ALUNO(A)1 | ALUNO(A)4| 2     | 0     | 10     | 10     | 0 | 10   | 32 |\n",
-    "ALUNO(A)1 | ALUNO(A)5| 10     | 0    | 10     | 10     | 0 | 10   | 40 |"
+    "ALUNO(A)1 | ALUNO(A)5| 10     | 0    | 10     | 10     | 0 | 10   | 40 |\n",
+    "\n",
+    "\n",
+    "### A DISTÂNCIA EUCLIDIANA ACIMA É A DISTANCIA UNIDIMENSIONAL (ESTAMOS ANALISANDO APENAS UMA GRANDEZA POR VEZ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distância euclidiana multidimensional\n",
+    "\n",
+    "Imagine que estamos analisando um dataset com várias dimensões. Como por exemplo um dataset com peso, altura e idade de várias pessoas. Nesse caso, veja o dataset exemplo abaixo:\n",
+    "\n",
+    "|PESO|ALTURA|IDADE|\n",
+    "|----|------|-----|\n",
+    "|70  | 1.80 | 25  |\n",
+    "|82  | 1.70 | 30  |\n",
+    "|60  | 1.60 | 20  |\n",
+    "|94  | 1.75 | 35  |\n",
+    "|100 | 1.90 | 40  |\n",
+    "|50  | 1.55 | 12  |\n",
+    "|73  | 1.80 | 22  |\n",
+    "\n",
+    "se formos calcular a distância euclidiana entre o primeiro e o segundo aluno, teremos:\n",
+    "$$\\sqrt{(70-82)^2 + (1.80-1.70)^2 + (25-30)^2}$$\n",
+    "$$\\sqrt{(-12)^2 + (0.10)^2 + (-5)^2}$$\n",
+    "$$\\sqrt{144 + 0.01 + 25}$$\n",
+    "$$\\sqrt{169.01}$$\n",
+    "$$13.00$$\n",
+    "\n",
+    "### Conversão para base entre 0 e 1\n",
+    "\n",
+    "Por que precisamos converter as variáveis para uma base entre 0 e 1?\n",
+    "\n",
+    "Imagine que temos um dataset com idade e salário. A idade varia de 0 a 100 e o salário varia de 0 a 10000. Se calcularmos a distância euclidiana entre essas duas variáveis, a variável salário terá um peso muito maior que a variável idade, pois ela varia muito mais. Para evitar isso, convertemos as variáveis para uma base entre 0 e 1.\n",
+    "\n",
+    "Podemos realizar essa operação com regra de três simples."
    ]
   }
  ],
