--- a/TERCEIRO BIMESTRE/aprendendo-python/avaliacao_atitudinal_1.ipynb
+++ b/TERCEIRO BIMESTRE/aprendendo-python/avaliacao_atitudinal_1.ipynb
@@ -89,12 +89,15 @@
     "Usando a saída da questão 3, crie um programa com/que:\n",
     "\n",
     "- Uma função que receba uma dicionário com os valores de x e y\n",
-    "- Coloque os valores de x e y em um gráfico de linha utilizando a biblioteca matplotlib"
+    "- Coloque os valores de x e y em um gráfico de linha utilizando a biblioteca matplotlib\n",
+    "- Use a função abaixo para plotar o gráfico (ela recebe uma array de dicionários com os valores de x e y)\n",
+    "\n",
+    "```python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
